<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">DRGAssistant</string>

    <string name="title_builds">Builds</string>
    <string name="title_wiki">Wiki</string>
    <string name="scout">Scout</string>
    <string name="gunner">Gunner</string>
    <string name="engineer">Engineer</string>
    <string name="driller">Driller</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Do you really want to delete this build?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="overclock">Overclock</string>
    <string name="popular_builds">Look up popular builds</string>
    <string name="wiki_home">Home page</string>
    <string name="export">Export to file</string>
    <string name="share">Share in readable format</string>
    <string name="selectAll">Select All</string>
    <string name="tip_add">Create build</string>
    <string name="tip_share">Share builds</string>
    <string name="tip_import">Import builds</string>
    <string name="tip_delete">Delete builds</string>
    <string name="grenades">Grenades</string>
    <string name="tip_undo">undo</string>
    <string name="tip_redo">redo</string>
    <string name="tip_bold">bold</string>
    <string name="tip_italic">italic</string>
    <string name="tip_subscript">subscript</string>
    <string name="tip_underline">underline</string>
    <string name="tip_h1" tools:ignore="Typos">header1</string>
    <string name="tip_h2">header2</string>
    <string name="tip_h3">header3</string>
    <string name="tip_h4">header4</string>
    <string name="tip_superscript">superscript</string>
    <string name="tip_strikethrough">strikethrough</string>
    <string name="tip_align_left">align left</string>
    <string name="tip_align_center">align center</string>
    <string name="tip_align_right">align right</string>
    <string name="tip_indent">indent</string>
    <string name="tip_outdent">outdent</string>
    <string name="tip_ul">bullet list</string>
    <string name="tip_ol">numbered list</string>
    <string name="description_editor">Description / Guide</string>
    <string name="build_name">Build name</string>
    <string name="tier_level">Level %d</string>
    <string name="wiki_gg">Wiki.gg</string>
    <string name="wiki_gg_url" translatable="false">https://deeprockgalactic.wiki.gg/wiki/Deep_Rock_Galactic_Wiki</string>
    <string name="fandom">Fandom</string>
    <string name="fandom_url" translatable="false">https://deeprockgalactic.fandom.com/wiki/Deep_Rock_Galactic_Wiki</string>
    <string name="excel_driller" translatable="false">https://docs.google.com/spreadsheets/d/1cet1j7oWgf9_UjtttDUrumRdctBjsczZwjnY6x_Q4y0/edit#gid=256041206</string>
    <string name="excel_engineer" translatable="false">https://docs.google.com/spreadsheets/d/1cet1j7oWgf9_UjtttDUrumRdctBjsczZwjnY6x_Q4y0/edit#gid=1451675342</string>
    <string name="excel_gunner" translatable="false">https://docs.google.com/spreadsheets/d/1cet1j7oWgf9_UjtttDUrumRdctBjsczZwjnY6x_Q4y0/edit#gid=1953629443</string>
    <string name="excel_scout" translatable="false">https://docs.google.com/spreadsheets/d/1cet1j7oWgf9_UjtttDUrumRdctBjsczZwjnY6x_Q4y0/edit#gid=376221956</string>
</resources>