<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.BuildsFragment">

    <ListView
        android:id="@+id/builds_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/listview_button_panel"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:divider="@android:color/background_dark"
        android:dividerHeight="@dimen/_8sdp" />

    <RelativeLayout
        android:id="@+id/listview_button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@android:color/transparent"
        android:gravity="end">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/tip_add"
            android:src="@drawable/add_build"
            android:tint="@android:color/holo_green_light"
            app:fabCustomSize="@dimen/_42sdp"
            app:maxImageSize="@dimen/_32sdp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/multi_share_build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_toStartOf="@id/add_build"
            android:contentDescription="@string/tip_share"
            android:src="@drawable/ic_share"
            app:fabCustomSize="@dimen/_42sdp"
            app:maxImageSize="@dimen/_22sdp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/import_build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_toStartOf="@id/multi_share_build"
            android:contentDescription="@string/tip_import"
            android:src="@drawable/ic_import"
            app:fabCustomSize="@dimen/_42sdp"
            app:maxImageSize="@dimen/_24sdp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/multi_delete_build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_toStartOf="@id/import_build"
            android:contentDescription="@string/tip_delete"
            android:src="@drawable/delete_build"
            app:fabCustomSize="@dimen/_42sdp"
            app:maxImageSize="@dimen/_24sdp" />
    </RelativeLayout>

</RelativeLayout>